@@ -156,6 +156,7 @@ craptonite-wall=Craptonite wall
 rubia-efficiency-module4=Efficiency module 4
 rubia-holmium-craptalysis=Holmium craptalysis
 rubia-nutrients-from-sludge=Nutrients from sludge
+rubia-biofusion-promethium-science-pack=Biofused __ITEM__promethium-science-pack__
 
 ;Compatibility-only recipes
 rubia-compat-alloy-smelting-coke=Bacterial cokifaction
@@ -259,6 +260,7 @@ rubia-craptonite-tiber-implant=Tiberium implant
 rubia-craptonite-grillz=Zinc grillz
 
 rubia-biofusion-science-pack=Biofusion science packs
+rubia-biofusion-promethium-science-pack=Biofused __ITEM__promethium-science-pack__
 
 rubia-progression-stage1-compat-k2so=Krastorian biorecycling
 
@@ -297,6 +299,7 @@ rubia-biofusion-science-pack-removed=Removing Gleba or surface restrictions from
 rubia-nutrients-from-sludge=Learn to filter and process the useful organics from bacterial sludge for convenient biofuel on Rubia.
 rubia-nutrient-productivity=Make nutrients more efficiently.
 rubia-biochamber-productivity-bonus=Your vast experience working with biologicals allows you to use the biochamber more efficiently.
+rubia-biofusion-promethium-science-pack=Leverage your expertise in interplanetary biology to craft __ITEM__promethium-science-pack__ more efficiently.
 
 ;Craptonite tools
 rubia-craptonite-boots=Craptonite-reinforced boots with holmium alloy trim and soles to aid faster running. Feel the craptonite insoles with every step.
